# taskpipe

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
src/: lib.rs
src/taskpipe/: lib.rs.html
taskpipe/: fn.input.html  index.html  sidebar-items.js  stability.html  stability.json  struct.TaskPipe.html
tests/: lib.rs
